[package]
name = "CranServer"
version = "0.1.0"
authors = ["h5p9sl <21267024+h5p9sl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.2"
features = ["full"]

[dependencies]
log = "0.4"
env_logger = "0.8"
toml = "0.5"

