[package]
name = "cran_server"
version = "0.1.0"
authors = ["h5p9sl <21267024+h5p9sl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.3"
features = ["full",] 

[dependencies.tokio-util]
version = "0.6"
features = ["codec",]

[dependencies.serde]
version = "1.0"
features = ["derive",]

[dependencies]
log = "0.4"
env_logger = "0.8"
toml = "0.5"
bincode = "1.3"
futures = "0.3"
bytes = "1.0"
anyhow = "1.0"
